apps/production/productivity/hermes-webui/patch_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hermes-webui-deployment
spec:
  template:
    spec:
      containers:
        - name: hermes-webui
