apps/production/productivity/hermes-webui/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hermes-webui
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hermes-webui.local.${DOMAIN}`)
      kind: Rule
      services:
        - name: hermes-webui-service
          port: 8787
  tls:
    certResolver: letsencrypt
